src/ui/snapshots/chatatui__ui__tests__sidebar_previews_the_highlighted_conversation.snap
---
source: src/ui/mod.rs
expression: "draw(&mut app, 100, 14).backend()"
---
"╭ Conversations ───────────────────────╮ Aperçu · Tarte tatin · Entrée ouvre · Échap revient        "
"│⌕ tapez pour chercher                 │                                                            "
"│                                      │        Comment réussir le caramel ?                        "
"│▌ Tarte tatin                         │                                                            "
"│  il y a 3 h · qwen2.5:7b             │✳ À sec, sans remuer.                                       "
"│                                      │                                                            "
"│                                      │                                                            "
"│                                      │                                                            "
"│                                      │                                                            "
"│                                      │                                                            "
"│                                      │── Message ─────────────────────────────────────────────────"
"│                                      │  Écrivez votre message…                                    "
"╰───────────── Ctrl+R renommer · Suppr ╯                                                            "
" ● Prêt │ Ollama › llama3.2         ↑↓ choisir · Entrée ouvrir · tapez pour chercher · Échap fermer "
