src/ui/snapshots/chatatui__ui__tests__sidebar_with_conversations.snap
---
source: src/ui/mod.rs
expression: "draw(&mut app, 90, 14).backend()"
---
"╭ Conversations ───────────────────╮ ▌ Vous                                               "
"│⌕ tapez pour chercher             │ Comment trier un Vec ?                               "
"│                                  │                                                      "
"│  ● Comment trier un Vec ?        │ ▌ Assistant                                          "
"│  à l'instant · llama3.2          │ Avec sort.                                           "
"│▌ Recette de la tarte tatin aux p…│                                                      "
"│  il y a 3 h · qwen2.5:7b         │                                                      "
"│  Plan de cours RAG               │                                                      "
"│  il y a 3 j · ☁ claude-test      │                                                      "
"│                                  │                                                      "
"│                                  │╭ Message ───────────────────────────────────────────╮"
"│                                  ││ Écrivez votre message…                             │"
"╰───────── Ctrl+R renommer · Suppr ╯╰────────────────────────────────────────────────────╯"
" ● Prêt │ Ollama › llama3.2 │ ctx ≈40           ↑↓ choisir · Entrée ouvrir · Échap fermer "
