src/ui/snapshots/chatatui__ui__tests__status_bar_gauge.snap
---
source: src/ui/mod.rs
expression: "draw(&mut app, 90, 10).backend()"
---
" ▎ let mut v = vec![3, 1, 2];                                                             "
" ▎ v.sort_unstable();                                                                     "
"                                                                                          "
" • plus rapide                                                                            "
" • pas d'allocation                                                                       "
"                                                                                          "
"╭ Message ───────────────────────────────────────────────────────────────────────────────╮"
"│ Écrivez votre message…                                                                 │"
"╰────────────────────────────────────────────────────────────────────────────────────────╯"
" ● Prêt │ Ollama › llama3.2 │ ctx 3,4k/4,1k 83 % (/context)          / commandes · Ctrl+P "
