src/ui/snapshots/chatatui__ui__tests__waiting_before_the_first_token.snap
---
source: src/ui/mod.rs
expression: "draw(&mut app, 70, 12).backend()"
---
"                                                                      "
"        Raconte une histoire                                          "
"                                                                      "
"✳ llama3.2 réfléchit…  3 s                                            "
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"── Message ───────────────────────────────────────────────────────────"
"  Écrivez votre message…                                              "
"                                                                      "
" ◑ Génération… │ Ollama › llama3.2 │ ctx ≈32            Échap annuler "
