src/ui/snapshots/chatatui__ui__tests__waiting_on_retrieval_names_the_collections.snap
---
source: src/ui/mod.rs
expression: "draw(&mut app, 70, 12).backend()"
---
"                                                                      "
"        Résume le cours                                               "
"                                                                      "
"✳ ⠋ recherche dans 2 collections…                                     "
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"── Message ───────────────────────────────────────────────────────────"
"  Écrivez votre message…                                              "
"                                                                      "
" ◐ Génération… │ Ollama › llama3.2 │ ctx ≈31            Échap annuler "
